# solarflow-3

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RULES.md  STATUS.md  SolarFlow_설계문서_통합판.md  TASK.md  TASK5_LC_TT.md  backup.sh  fly.toml  go.mod  go.sum  inspector_review.md  local-Caddyfile  main.go  postgrest.conf  setup_step2.sh  supabase_backup.sql  supabase_backup_fixed.sql
.claude/: settings.json
.codex/: setup.sh
backend/: .air.toml  .env.example  .gitignore  DECISIONS.md  PROGRESS.md  fly.toml  go.mod  go.sum  main.go
engine/: Cargo.toml  fly.toml
engine/.cargo/: config.toml
engine/scripts/: dev.ps1
engine/src/: error.rs  lib.rs  main.rs
engine/src/calc/: forecast.rs  inventory.rs  landed_cost.rs  lc_schedule.rs  margin.rs  mod.rs  order_risk.rs  price_forecast.rs  receipt_match.rs  search.rs  turnover.rs
engine/src/db/: mod.rs
engine/src/model/: forecast.rs  inventory.rs  landed_cost.rs  lc_schedule.rs  margin.rs  mod.rs  order_risk.rs  price_forecast.rs  turnover.rs
engine/src/routes/: calc.rs  mod.rs
engine/tests/: margin_test.rs
frontend/: .env.example  .env.production.example  .gitignore  README.md  biome.json  bunfig.toml  index.html  package-lock.json  package.json  playwright.config.ts  setup_step4a.sh  setup_step4b.sh  tsconfig.test.json  vite.config.ts
harness/: AGENT-BUILDER-VISION.md  AGENTS.md  CHECKLIST_TEMPLATE.md  COMMUNICATION.md  DECISIONS.md  DESIGN_v4_FULL.md  FEATURE-WIRING-MATRIX.md  FINAL_DESIGN_PO_STRUCTURE.md  META_FORMS_GUIDE.md  NEW-TENANT-GUIDE.md  OCR_AUTOFILL_ROADMAP.md  ONBOARDING_SANDBOX.md  OPERATION_MIGRATION_PLAN.md  (+16 more)
(+1544 files in other folders)
